--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     a{color:var(--accent)}
     .wrap{max-width:1100px;margin:0 auto;padding:16px 16px 100px}
 
-    header{position:sticky;top:0;z-index:5;background:linear-gradient(180deg,var(--bg1) 70%,rgba(0,0,0,0));backdrop-filter:saturate(120%) blur(4px);display:flex;gap:12px;align-items:center;justify-content:space-between;margin:0 0 16px;padding-top:8px}
+    header{position:sticky;top:0;z-index:5;background:linear-gradient(180deg,var(--bg1) 85%,rgba(0,0,0,0));backdrop-filter:saturate(120%) blur(4px);display:flex;gap:12px;align-items:center;justify-content:space-between;margin:0 0 16px;padding:8px 0 10px}
     .title{font-weight:800;letter-spacing:.3px;font-size:20px;display:flex;align-items:center;gap:10px}
     .pill{background:var(--card);border:1px solid var(--border);border-radius:14px;padding:6px 10px;color:var(--muted)}
 
@@ -106,7 +106,9 @@
     .muted{color:var(--muted)}
     .small{font-size:12px}
 
-    /* Minimální UI během hry (mobil) */
+    /* Schovávání při aktivní hře */
+    body.playing .hide-when-playing{display:none !important}
+    /* Volitelné minimální UI – schovat, pokud je v nastavení zapnuto */
     body.minimal.playing .hide-during-play{display:none !important}
 
     /* Lepivý informační panel dole */
@@ -135,7 +137,7 @@
 <div class="wrap">
   <header>
     <div class="title">🎯 <span>Šipky – zapis skóre</span><span class="pill" id="statusPill">Připraveno</span></div>
-    <div class="tabs">
+    <div class="tabs hide-when-playing">
       <button class="tab active" data-tab="game">Hra</button>
       <button class="tab" data-tab="history">Historie</button>
       <button class="tab" data-tab="leaderboard">Žebříček</button>
@@ -150,8 +152,10 @@
         <h3>Hráči</h3>
         <div class="players" id="players"></div>
         <div class="controls" style="margin-top:10px">
-          <input id="newPlayerName" placeholder="Jméno hráče" />
-          <button class="primary" id="addPlayerBtn" onclick="addPlayer()">Přidat hráče</button>
+          <div class="hide-when-playing" style="display:contents">
+            <input id="newPlayerName" placeholder="Jméno hráče" />
+            <button class="primary" id="addPlayerBtn" onclick="addPlayer()">Přidat hráče</button>
+          </div>
           <button class="warn hide-during-play" onclick="startNewLeg()">Nové kolo (leg)</button>
           <button class="ghost" onclick="undoLastDart()">Zpět poslední hod</button>
         </div>
@@ -273,18 +277,32 @@ const state = {
 
 function ts(){ return Date.now(); }
 
+// --- persistentní úložiště ---
 function loadHistory(){
   try{ return JSON.parse(localStorage.getItem('dartsHistoryV1')) || { players:[], legs:[] }; }
   catch(e){ return { players:[], legs:[] }; }
 }
-function saveHistory(){
-  localStorage.setItem('dartsHistoryV1', JSON.stringify(state.history));
-}
+function saveHistory(){ localStorage.setItem('dartsHistoryV1', JSON.stringify(state.history)); }
 function loadSettings(){
   try{ return JSON.parse(localStorage.getItem('dartsSettingsV1')) || { theme:'theme-dark', colorizeKeys:true, minimalUi:true, stickyBar:true }; }
   catch(e){ return { theme:'theme-dark', colorizeKeys:true, minimalUi:true, stickyBar:true }; }
 }
 function saveSettings(){ localStorage.setItem('dartsSettingsV1', JSON.stringify(state.settings)); }
+function loadActive(){
+  try{ return JSON.parse(localStorage.getItem('dartsActiveV1')) || null; }
+  catch(e){ return null; }
+}
+function saveActive(){
+  const snapshot = {
+    startingScore: state.startingScore,
+    doubleOut: state.doubleOut,
+    players: state.players,
+    currentIndex: state.currentIndex,
+    leg: state.leg,
+  };
+  localStorage.setItem('dartsActiveV1', JSON.stringify(snapshot));
+}
+function clearActive(){ localStorage.removeItem('dartsActiveV1'); }
 
 // ------------------------
 // UI – panely
@@ -323,6 +341,8 @@ function addPlayer(){
   if(!existing) state.history.players.push({id, name, wins});
   inp.value='';
   renderPlayers();
+  saveHistory();
+  saveActive();
   if(state.players.length===1) setStatus('Přidejte další hráče nebo začněte házet.');
 }
 
@@ -333,6 +353,7 @@ function removePlayer(id){
     state.players.splice(idx,1);
     if(state.currentIndex>=state.players.length) state.currentIndex=0;
     renderPlayers();
+    saveActive();
   }
 }
 
@@ -344,10 +365,11 @@ function setGame(val){
   renderPlayers();
   renderLiveHistory();
   setStatus(`Nastaveno ${state.startingScore}.`);
+  saveActive();
 }
 
-function toggleDoubleOut(on){ if(isInProgress()){ alert('Double-out lze měnit jen před legem.'); document.getElementById('doubleOut').checked=state.doubleOut; return;} state.doubleOut = on; setStatus(`Double-out ${on?'zapnuto':'vypnuto'}.`); }
-function toggleSound(on){ state.soundOn = on; setStatus(`Čtení hodnot ${on?'zapnuto':'vypnuto'}.`); }
+function toggleDoubleOut(on){ if(isInProgress()){ alert('Double-out lze měnit jen před legem.'); document.getElementById('doubleOut').checked=state.doubleOut; return;} state.doubleOut = on; setStatus(`Double-out ${on?'zapnuto':'vypnuto'}.`); saveActive(); }
+function toggleSound(on){ state.soundOn = on; setStatus(`Čtení hodnot ${on?'zapnuto':'vypnuto'}.`); saveActive(); }
 
 function startNewLeg(){
   if(state.players.length===0){ alert('Přidejte alespoň jednoho hráče.'); return; }
@@ -358,6 +380,7 @@ function startNewLeg(){
   renderLiveHistory();
   setStatus('Začíná nové kolo.');
   updateUI();
+  saveActive();
 }
 
 function currentPlayer(){ return state.players[state.currentIndex]; }
@@ -388,6 +411,7 @@ function enterScore(base, mul){
   document.querySelector('#multiplier .chip[data-mul="1"]').classList.add('active');
 
   updateUI();
+  saveActive();
 }
 
 function finishTurn(){
@@ -395,7 +419,7 @@ function finishTurn(){
   if(!player) return;
   const darts = player.turnThrows||[];
 
-  if(darts.length===0){ nextPlayer(); renderPlayers(); updateTurnInfo(); updateSticky(); return; }
+  if(darts.length===0){ nextPlayer(); renderPlayers(); updateTurnInfo(); updateSticky(); saveActive(); return; }
 
   const turnTotal = darts.reduce((a,d)=>a+d.score,0);
   let remaining = player.remaining - turnTotal;
@@ -428,6 +452,7 @@ function finishTurn(){
     startNewLeg();
     renderLeaderboard();
     updateUI();
+    saveActive();
     return;
   }
 
@@ -438,6 +463,7 @@ function finishTurn(){
   updateTurnInfo();
   saveHistory();
   updateUI();
+  saveActive();
 }
 
 function undoLastDart(){
@@ -447,6 +473,7 @@ function undoLastDart(){
     renderPlayers();
     renderLiveHistory();
     updateUI();
+    saveActive();
     return;
   }
   const last = state.leg.turns[state.leg.turns.length-1];
@@ -460,6 +487,7 @@ function undoLastDart(){
   renderPlayers();
   renderLiveHistory();
   updateUI();
+  saveActive();
 }
 
 // ------------------------
@@ -489,16 +517,18 @@ function renderPlayers(){
       </div>
       <div style="display:flex;align-items:center;gap:8px">
         <div class="score">${p.remaining}</div>
-        <button class="ghost" title="Odebrat" onclick="removePlayer('${p.id}')">✖</button>
+        <button class="ghost hide-when-playing" title="Odebrat" onclick="removePlayer('${p.id}')">✖</button>
       </div>`;
     box.appendChild(el);
   });
   updateTurnInfo();
   updateSticky();
-  // zamezit přidávání během hry
+  // Disable/hide add controls podle stavu
   const playing = isInProgress();
-  document.getElementById('newPlayerName').disabled = playing;
-  document.getElementById('addPlayerBtn').disabled = playing;
+  const nameInp = document.getElementById('newPlayerName');
+  const addBtn = document.getElementById('addPlayerBtn');
+  if(nameInp) nameInp.disabled = playing;
+  if(addBtn) addBtn.disabled = playing;
 }
 
 function renderLiveHistory(){
@@ -626,10 +656,10 @@ function applySettings(){
 }
 
 function bindSettingsUI(){
-  const sel = document.getElementById('themeSelect'); if(sel){ sel.value = state.settings.theme; sel.onchange = ()=>{ state.settings.theme = sel.value; saveSettings(); applySettings(); }; }
-  const ck1 = document.getElementById('colorizeKeys'); if(ck1){ ck1.checked = !!state.settings.colorizeKeys; ck1.onchange=()=>{ state.settings.colorizeKeys = ck1.checked; saveSettings(); applySettings(); }; }
-  const ck2 = document.getElementById('minimalUi'); if(ck2){ ck2.checked = !!state.settings.minimalUi; ck2.onchange=()=>{ state.settings.minimalUi = ck2.checked; saveSettings(); applySettings(); }; }
-  const ck3 = document.getElementById('stickyBarToggle'); if(ck3){ ck3.checked = !!state.settings.stickyBar; ck3.onchange=()=>{ state.settings.stickyBar = ck3.checked; saveSettings(); applySettings(); }; }
+  const sel = document.getElementById('themeSelect'); if(sel){ sel.value = state.settings.theme; sel.onchange = ()=>{ state.settings.theme = sel.value; saveSettings(); applySettings(); saveActive(); }; }
+  const ck1 = document.getElementById('colorizeKeys'); if(ck1){ ck1.checked = !!state.settings.colorizeKeys; ck1.onchange=()=>{ state.settings.colorizeKeys = ck1.checked; saveSettings(); applySettings(); saveActive(); }; }
+  const ck2 = document.getElementById('minimalUi'); if(ck2){ ck2.checked = !!state.settings.minimalUi; ck2.onchange=()=>{ state.settings.minimalUi = ck2.checked; saveSettings(); applySettings(); saveActive(); }; }
+  const ck3 = document.getElementById('stickyBarToggle'); if(ck3){ ck3.checked = !!state.settings.stickyBar; ck3.onchange=()=>{ state.settings.stickyBar = ck3.checked; saveSettings(); applySettings(); saveActive(); }; }
 }
 
 function updateUI(){
@@ -665,10 +695,12 @@ function setupMultiplierChips(){
       box.querySelectorAll('.chip').forEach(c=>c.classList.remove('active'));
       ch.classList.add('active');
       state.multiplier = Number(ch.dataset.mul);
+      saveActive();
     });
   });
 }
 
+// Inicializace + obnovení aktivní hry
 buildKeypad();
 setupMultiplierChips();
 renderPlayers();
@@ -676,6 +708,18 @@ renderLiveHistory();
 updateTurnInfo();
 applySettings();
 bindSettingsUI();
+
+const saved = loadActive();
+if(saved && saved.players && saved.players.length){
+  state.startingScore = saved.startingScore ?? state.startingScore;
+  state.doubleOut = !!saved.doubleOut;
+  state.players = saved.players;
+  state.currentIndex = saved.currentIndex||0;
+  state.leg = saved.leg || state.leg;
+  renderPlayers();
+  renderLiveHistory();
+  updateTurnInfo();
+}
 updateUI();
 </script>
 </body>
