--- a/index.html
+++ b/index.html
@@ -77,6 +77,43 @@
       .tabs{flex-wrap:wrap}
     }
     @media (max-width: 480px){ .keypad{grid-template-columns:repeat(4,1fr)} }
+    /* Světlá témata (více variant) */
+body.theme-light{
+  --bg1:#f6f8ff; --bg2:#e9eefb; --fg:#0f1230; --muted:#4b5070;
+  --card:#ffffff; --border:#cfd6f1; --accent:#1e60ff; --accent2:#0fb66f;
+  --danger:#e54747; --warn:#d9a000; --mul1:#eef2ff; --mul2:#e6fff0; --mul3:#fff0ea;
+}
+/* vysoký kontrast (světlý) */
+body.theme-contrast{
+  --bg1:#ffffff; --bg2:#ffffff; --fg:#000000; --muted:#222;
+  --card:#ffffff; --border:#000000; --accent:#0000ff; --accent2:#00aa00;
+  --danger:#ff0000; --warn:#ff9900; --mul1:#f2f2f2; --mul2:#e8fff0; --mul3:#ffeaea;
+}
+/* modrá světlá */
+body.theme-light-blue{
+  --bg1:#eef6ff; --bg2:#e4f0ff; --fg:#0b1630; --muted:#3b4a6a;
+  --card:#ffffff; --border:#b9d1ff; --accent:#2b6bff; --accent2:#0fb66f;
+  --danger:#e54747; --warn:#d9a000; --mul1:#eaf2ff; --mul2:#e9fff3; --mul3:#fff0f2;
+}
+/* mátová světlá */
+body.theme-light-mint{
+  --bg1:#f0fff7; --bg2:#e6fff1; --fg:#0b3020; --muted:#2d6a52;
+  --card:#ffffff; --border:#bfead6; --accent:#0aa86f; --accent2:#1e60ff;
+  --danger:#e54747; --warn:#d9a000; --mul1:#effaf5; --mul2:#e6fff1; --mul3:#fff0ea;
+}
+/* růžová světlá */
+body.theme-light-rose{
+  --bg1:#fff2f6; --bg2:#ffe8f0; --fg:#30101b; --muted:#6a2d45;
+  --card:#ffffff; --border:#ffb9cf; --accent:#e43d6f; --accent2:#0fb66f;
+  --danger:#d12b4a; --warn:#d9a000; --mul1:#fff0f6; --mul2:#f0fff6; --mul3:#fff4ef;
+}
+/* písková světlá */
+body.theme-light-sand{
+  --bg1:#fffaf0; --bg2:#fff4dc; --fg:#302410; --muted:#6a5a2d;
+  --card:#ffffff; --border:#f0e0b9; --accent:#ff8a00; --accent2:#1d7a4a;
+  --danger:#d33; --warn:#c80; --mul1:#fff6e5; --mul2:#eeffe8; --mul3:#fff0ea;
+}
+
   </style>
 </head>
 <body class="theme-dark sticky-info">
@@ -183,19 +220,39 @@
 
   <!-- SETTINGS -->
   <section data-panel="settings" hidden>
-    <div class="col grow">
-      <h3>Nastavení</h3>
-      <div class="controls" style="grid-template-columns:repeat(2,minmax(0,1fr));max-width:820px">
-        <label><input type="checkbox" id="showTips" checked/> Zobrazovat checkout tipy</label>
-      </div>
-      <p class="small muted">Čtení hodnot je řešeno <b>TTS</b> (česky). Soubory MP3 se nepoužívají.</p>
+  <div class="col grow">
+    <h3>Nastavení</h3>
+    <div class="controls" style="grid-template-columns:repeat(2,minmax(0,1fr));max-width:820px">
+      <label> Téma vzhledu
+        <select id="themeSelect">
+          <option value="theme-dark">Tmavé (výchozí)</option>
+          <option value="theme-light">Světlé – klasické</option>
+          <option value="theme-light-blue">Světlé – modré</option>
+          <option value="theme-light-mint">Světlé – mátové</option>
+          <option value="theme-light-rose">Světlé – růžové</option>
+          <option value="theme-light-sand">Světlé – pískové</option>
+          <option value="theme-contrast">Světlé – vysoký kontrast</option>
+        </select>
+      </label>
+      <label><input type="checkbox" id="showTips" checked/> Zobrazovat checkout tipy</label>
     </div>
-  </section>
+    <p class="small muted">Volba tématu se uloží do prohlížeče. Čtení hodnot je řešeno <b>TTS</b> (česky) – bez MP3.</p>
+  </div>
+</section>
+
 </div>
 
 <div class="stickybar" id="stickyBar" role="status" aria-live="polite">—</div>
 
 <script>
+  // Témata – uložení a aplikace
+var THEME_KEY='dartsThemeV1';
+var THEME_CLASSES=['theme-dark','theme-light','theme-light-blue','theme-light-mint','theme-light-rose','theme-light-sand','theme-contrast'];
+function loadTheme(){ try{ return localStorage.getItem(THEME_KEY) || 'theme-dark'; }catch(e){ return 'theme-dark'; } }
+function saveTheme(cls){ try{ localStorage.setItem(THEME_KEY, cls); }catch(e){} }
+function applyTheme(cls){ var b=document.body; for(var i=0;i<THEME_CLASSES.length;i++){ b.classList.remove(THEME_CLASSES[i]); } b.classList.add(cls); }
+function bindThemeUI(){ var sel=document.getElementById('themeSelect'); if(!sel) return; sel.value=loadTheme(); sel.onchange=function(){ var v=sel.value; applyTheme(v); saveTheme(v); }; }
+
 /* ====== PWA registrace ====== */
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', function(){
@@ -552,6 +609,8 @@ function buildKeypad(){
 }
 
 /* ====== Init ====== */
+  applyTheme(loadTheme());
+bindThemeUI();
 buildKeypad();
 bindGameOptions();
 renderPlayers(); renderLiveHistory(); updateUI();
